--- a/index.html
+++ b/index.html
@@ -3,9 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Practica</title>
 </head>
 <body>
-    <h1>hola mundo!!!!!</h1>
+    <nav>
+        <ol>
+            <li>Home</li>
+            <li>Pictures</li>
+            <li>About</li>
+        </ol>
+    </nav>
+    <h1>hola mundo</h1>
+    Contenido
+
+    <a href="https://www.google.com"> Ir a Google</a>
+    
+    <footer>Derechos Reservados &copy; 2025-2026</footer>
 </body>
 </html>
