--- a/index.html
+++ b/index.html
@@ -7,16 +7,16 @@
 </head>
 <body>
     <nav>
-        <ol>
-            <li>Home</li>
-            <li>Pictures</li>
-            <li>About</li>
-        </ol>
+        <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="./pages/about.html">Pictures</a></li>
+            <li><a href="./pages/pictures.html">About</a></li>
+        </ul>
     </nav>
-    <h1>hola mundo</h1>
-    Contenido
-
-    <a href="https://www.google.com"> Ir a Google</a>
+    <h1>index</h1>
+    Contenido <br>
+    <img src="prueba2.jpeg" >
+   
     
     <footer>Derechos Reservados &copy; 2025-2026</footer>
 </body>
