--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./styles/style.css"/>
     <title>Practica</title>
 </head>
 <body>
@@ -13,11 +14,12 @@
             <li><a href="./pages/pictures.html">About</a></li>
         </ul>
     </nav>
-    <h1>index</h1>
+    <h1 class = "boton"> index</h1>
     Contenido <br>
-    <img src="prueba2.jpeg" >
-   
-    
+    <img src="nigger.jpeg" alt="Image" height="150" width="150" >
+    <br>
+   <a href = "https://poki.com/">Ir a Google</a>
+    <button class = "boton" >Click</button>
     <footer>Derechos Reservados &copy; 2025-2026</footer>
 </body>
 </html>
