--- a/index.html
+++ b/index.html
@@ -3,23 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="./styles/style.css"/>
     <title>Practica</title>
 </head>
-<body>
-    <nav>
-        <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="./pages/about.html">Pictures</a></li>
-            <li><a href="./pages/pictures.html">About</a></li>
-        </ul>
-    </nav>
-    <h1 class = "boton"> index</h1>
-    Contenido <br>
-    <img src="nigger.jpeg" alt="Image" height="150" width="150" >
-    <br>
-   <a href = "https://poki.com/">Ir a Google</a>
-    <button class = "boton" >Click</button>
-    <footer>Derechos Reservados &copy; 2025-2026</footer>
+<body class="d-flex justify-content-center align-items-center vh-100">
+    <div class="w-25 p-4 bg-light rounded shadow">
+        <input 
+            type="text"
+            class="form-control mb-2"
+            placeholder="Username"
+            aria-label="Username"
+        />
+        <input 
+            type="password"
+            class="form-control mb-2"
+            placeholder="Password"
+            aria-label="password"
+        />
+        <button class="btn btn-primary w-100">Login</button>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
