--- a/pages/about.html
+++ b/pages/about.html
@@ -9,7 +9,7 @@
 <body>
     <nav>
         <ul>
-            <li><a href="../">Home</a></li>
+            <li><a href="./home.html">Home</a></li>
             <li><a href="./pictures.html">Pictures</a></li>
             <li><a href="#">About</a></li>
         </ul>
