--- a/pages/pictures.html
+++ b/pages/pictures.html
@@ -10,7 +10,7 @@
 <body>
     <nav>
         <ul>
-            <li><a href="../">Home</a></li>
+            <li><a href="./home.html">Home</a></li>
             <li><a href="#">Pictures</a></li>
             <li><a href="./about.html">About</a></li>
         </ul>
