--- a/index.html
+++ b/index.html
@@ -12,17 +12,21 @@
         <input 
             type="text"
             class="form-control mb-2"
+            id="username"
             placeholder="Username"
             aria-label="Username"
         />
         <input 
             type="password"
             class="form-control mb-2"
+            id="password"
             placeholder="Password"
             aria-label="password"
         />
-        <button class="btn btn-primary w-100">Login</button>
+       
+        <button id = "btnLogin" class="btn btn-primary w-100">Login</button>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script src="./scripts/index.js"></script>
 </body>
 </html>
