--- a/pages/home.html
+++ b/pages/home.html
@@ -34,6 +34,8 @@
         </div>
       </nav>
       <h1 class = "boton"> Homepage </h1>
+      <h1 id = "h1">  </h1>
+      
     
     Contenido <br>
     <img src="../prueba2.jpeg" alt="Image" height="150" width="150" >
@@ -42,5 +44,7 @@
     <button class = "boton" >Click</button>
     <footer>Derechos Reservados &copy; 2025-2026</footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script src="../scripts/home.js"></script>
 </body>
+<li><a id = "logout" href="/index.html"></a>logout</li>
 </html>
